pedigree update fix